Add booking api
